[gd_scene load_steps=10 format=3 uid="uid://bud4iowbjy6dr"]

[ext_resource type="Script" path="res://Scenes/level_17.gd" id="1_0kl18"]
[ext_resource type="TileSet" uid="uid://bjtphgbwnhelx" path="res://Assets/bgtiles.tres" id="1_1t60s"]
[ext_resource type="TileSet" uid="uid://5txfr7411rug" path="res://Assets/maptiles.tres" id="2_yve7e"]
[ext_resource type="PackedScene" uid="uid://bci7tjxoe75mn" path="res://Scenes/finish_flag.tscn" id="3_ac67x"]
[ext_resource type="PackedScene" uid="uid://b2ku6ali5xjaw" path="res://Scenes/character_1.tscn" id="4_a81i4"]
[ext_resource type="PackedScene" uid="uid://b0v3q47ijiww8" path="res://Scenes/boundaries.tscn" id="4_qmt8r"]
[ext_resource type="PackedScene" uid="uid://rfxd6a0f3352" path="res://Scenes/character_2.tscn" id="5_yxb7t"]
[ext_resource type="PackedScene" uid="uid://bvfbdpnjy8xh8" path="res://Scenes/character_3.tscn" id="6_qp7gy"]
[ext_resource type="PackedScene" uid="uid://bgmlveeipn3us" path="res://Scenes/ui.tscn" id="7_4jj60"]

[node name="Level17" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kl18")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -640.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="BG" type="TileMap" parent="Control"]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_1t60s")
format = 2
layer_0/tile_data = PackedInt32Array(0, 589824, 0, 1, 655360, 0, 2, 720896, 0, 65536, 589824, 0, 65537, 655360, 0, 65538, 720896, 0, 131072, 589824, 0, 131073, 655360, 0, 131074, 720896, 0, 196608, 589824, 1, 196609, 655360, 1, 196610, 720896, 1, 262144, 589824, 2, 262145, 655360, 2, 262146, 720896, 2, 327680, 655360, 3, 327681, 655360, 3, 327682, 655360, 3, 393216, 655360, 3, 393217, 655360, 3, 393218, 655360, 3, 458752, 655360, 3, 458753, 655360, 3, 458754, 655360, 3, 524288, 589824, 2, 524289, 655360, 2, 524290, 720896, 2, 3, 589824, 0, 4, 655360, 0, 5, 720896, 0, 65539, 589824, 0, 65540, 655360, 0, 65541, 720896, 0, 131075, 589824, 0, 131076, 655360, 0, 131077, 720896, 0, 196611, 589824, 1, 196612, 655360, 1, 196613, 720896, 1, 262147, 589824, 2, 262148, 655360, 2, 262149, 720896, 2, 327683, 655360, 3, 327684, 655360, 3, 327685, 655360, 3, 393219, 655360, 3, 393220, 655360, 3, 393221, 655360, 3, 458755, 655360, 3, 458756, 655360, 3, 458757, 655360, 3, 524291, 589824, 2, 524292, 655360, 3, 524293, 655360, 3, 6, 589824, 0, 7, 655360, 0, 8, 720896, 0, 65542, 589824, 0, 65543, 655360, 0, 65544, 720896, 0, 131078, 589824, 0, 131079, 655360, 0, 131080, 720896, 0, 196614, 589824, 1, 196615, 655360, 1, 196616, 720896, 1, 262150, 589824, 2, 262151, 655360, 2, 262152, 720896, 2, 327686, 655360, 3, 327687, 655360, 3, 327688, 655360, 3, 393222, 655360, 3, 393223, 655360, 3, 393224, 655360, 3, 458758, 655360, 3, 458759, 655360, 3, 458760, 655360, 3, 524294, 589824, 2, 524295, 655360, 3, 524296, 720896, 2, 9, 589824, 0, 10, 720896, 0, 65545, 589824, 0, 65546, 720896, 0, 131081, 589824, 0, 131082, 720896, 0, 196617, 589824, 1, 196618, 655360, 1, 262153, 589824, 2, 262154, 655360, 2, 327689, 655360, 3, 327690, 655360, 3, 393225, 655360, 3, 393226, 655360, 3, 458761, 655360, 3, 458762, 655360, 3, 524297, 655360, 3, 524298, 655360, 3, 589824, 589824, 3, 655360, 589824, 3, 720896, 589824, 3, 786432, 589824, 3, 917504, 589824, 3, 983040, 589824, 3, 1048576, 589824, 3, 1114112, 589824, 3, 1179648, 589824, 3, 1245184, 589824, 3, 589825, 589824, 3, 655361, 589824, 3, 720897, 589824, 3, 786433, 589824, 3, 917505, 589824, 3, 983041, 589824, 3, 1048577, 589824, 3, 1114113, 589824, 3, 1179649, 589824, 3, 1245185, 589824, 3, 589826, 589824, 3, 655362, 589824, 3, 720898, 589824, 3, 786434, 589824, 3, 983042, 589824, 3, 1048578, 589824, 3, 1114114, 589824, 3, 589827, 589824, 3, 655363, 589824, 3, 720899, 589824, 3, 786435, 589824, 3, 983043, 589824, 3, 1048579, 589824, 3, 1114115, 589824, 3, 589828, 655360, 3, 655364, 589824, 3, 720900, 589824, 3, 786436, 589824, 3, 983044, 589824, 3, 1048580, 589824, 3, 1245188, 589824, 3, 589829, 655360, 3, 655365, 655360, 3, 720901, 589824, 3, 983045, 589824, 3, 1114117, 589824, 3, 589830, 589824, 3, 655366, 655360, 3, 720902, 589824, 3, 1114118, 589824, 3, 589831, 589824, 3, 655367, 655360, 3, 720903, 589824, 3, 589832, 589824, 3, 655368, 655360, 3, 720904, 589824, 3, 589833, 589824, 3, 655369, 655360, 3, 720905, 589824, 3, 589834, 655360, 3, 655370, 655360, 3, 720906, 589824, 3, 589835, 655360, 3, 655371, 655360, 3, 720907, 589824, 3, 524299, 655360, 3, 458763, 655360, 3, 393227, 655360, 3, 327691, 655360, 3, 262155, 720896, 2, 196619, 720896, 1, 131083, 720896, 0, 11, 720896, 0, 65547, 720896, 0)

[node name="TileMap" type="TileMap" parent="Control"]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("2_yve7e")
format = 2
layer_0/name = "Dets"
layer_0/tile_data = PackedInt32Array(131075, 1114112, 6, 65539, 1048576, 4, 3, 1114112, 4, 2, 1114112, 2, 4, 1245184, 2, 131074, 589826, 5, 131076, 655362, 5)
layer_1/name = "Dets2"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "bg"
layer_2/modulate = Color(0.780392, 0.690196, 0.6, 1)
layer_2/tile_data = PackedInt32Array(589833, 131072, 6, 589832, 131072, 6, 589831, 131072, 6, 589830, 131072, 6, 589829, 131072, 6, 589828, 131072, 6, 589827, 131072, 6, 589826, 131072, 6, 589825, 131072, 6, 589824, 131072, 6, 524288, 131072, 6, 262144, 131072, 6, 262145, 131072, 6, 327681, 131072, 6, 393217, 131072, 6, 458753, 131072, 6, 458754, 131072, 6, 458755, 131072, 6, 458756, 131072, 6, 458757, 131072, 6, 458758, 131072, 6, 458759, 131072, 6, 458760, 131072, 6, 458761, 131072, 6, 393225, 131072, 6, 458752, 131072, 6, 393216, 131072, 6, 327680, 131072, 6, 524289, 131072, 6, 524290, 131072, 6, 524291, 131072, 6, 524292, 131072, 6, 524293, 131072, 6, 524294, 131072, 6, 524295, 131072, 6, 524296, 131072, 6, 524297, 131072, 6)
layer_3/name = "MAP"
layer_3/tile_data = PackedInt32Array(655369, 196610, 0, 655360, 65538, 0, 655361, 131074, 0, 655362, 131074, 0, 655363, 131074, 0, 655364, 131074, 0, 655365, 131074, 0, 655366, 131074, 0, 655367, 131074, 0, 655368, 131074, 0, 524296, 131074, 0, 524295, 131074, 0, 524294, 131074, 0, 524293, 131074, 0, 524292, 131074, 0, 524291, 131074, 0, 524290, 131074, 0, 524297, 196610, 0, 524289, 65538, 0, 458752, 0, 7, 393218, 65536, 7, 393219, 131074, 0, 393220, 131074, 0, 393221, 131074, 0, 393222, 131074, 0, 393223, 131074, 0, 393224, 196608, 7, 327682, 0, 6, 262146, 2, 2, 393216, 0, 6, 327680, 2, 1, 327688, 65538, 1, 327689, 196610, 0, 196608, 65536, 0, 196609, 131072, 0, 196610, 131072, 1, 196611, 131072, 0, 196612, 131072, 0, 196613, 131072, 0, 196614, 131072, 0, 196615, 131072, 0, 196616, 196608, 0, 589825, 524288, 6, 458760, 524288, 6, 131077, 524288, 6, 327686, 655362, 4, 262153, 655362, 4, 458757, 589826, 6, 458756, 655362, 6, 458758, 524290, 6, 589826, 524290, 6, 327687, 524290, 6)
layer_4/name = "Grid"
layer_4/modulate = Color(1, 1, 1, 0.564706)
layer_4/tile_data = PackedInt32Array(196608, 3, 0, 196609, 65539, 0, 196616, 131075, 0, 196615, 65539, 0, 196614, 65539, 0, 196613, 65539, 0, 196612, 65539, 0, 196611, 65539, 0, 196610, 65539, 1, 262146, 3, 4, 327682, 3, 4, 393218, 3, 7, 393219, 65539, 0, 393220, 65539, 0, 393221, 65539, 0, 393222, 65539, 0, 393223, 65539, 0, 393224, 131075, 7, 327688, 3, 1, 327689, 131075, 0, 327680, 3, 3, 393216, 3, 4, 458752, 3, 5, 524289, 3, 0, 524290, 65539, 0, 524291, 65539, 0, 524292, 65539, 0, 524293, 65539, 0, 524294, 65539, 0, 524295, 65539, 0, 524296, 65539, 0, 524297, 131075, 0, 655369, 131075, 0, 655368, 65539, 0, 655367, 65539, 0, 655366, 65539, 0, 655365, 65539, 0, 655364, 65539, 0, 655363, 65539, 0, 655362, 65539, 0, 655361, 65539, 0, 655360, 3, 0)

[node name="Boundaries" parent="Control" instance=ExtResource("4_qmt8r")]

[node name="FinishFlag" parent="Control" instance=ExtResource("3_ac67x")]
position = Vector2(0, 576)

[node name="FinishFlag2" parent="Control" instance=ExtResource("3_ac67x")]
position = Vector2(216, 288)

[node name="FinishFlag3" parent="Control" instance=ExtResource("3_ac67x")]
position = Vector2(648, 432)

[node name="Character1" parent="Control" instance=ExtResource("4_a81i4")]
position = Vector2(648, 648)

[node name="Character2" parent="Control" instance=ExtResource("5_yxb7t")]
position = Vector2(0, 288)

[node name="Character3" parent="Control" instance=ExtResource("6_qp7gy")]
position = Vector2(0, 144)

[node name="UI" parent="." instance=ExtResource("7_4jj60")]
layout_mode = 1
